# easynav_plugins-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  easynav_bonxai_maps_manager_plugins.xml  easynav_costmap_maps_manager_inflation_filter.xml  easynav_costmap_maps_manager_plugins.xml  easynav_costmap_planner_plugins.xml  easynav_mpc_controller_plugins.xml  easynav_navmap_planner_plugins.xml  easynav_octomap_maps_manager_inflation_filter.xml  easynav_routes_filters_plugins.xml  easynav_routes_maps_manager_plugins.xml  easynav_vff_controller_plugins.xml  kilted.ignore  package.xml  patches.conf  releaser_history.json  tracks.yaml
.github/: Doxyfile  thirdparty.repos
.github/workflows/: doxygen-doc.yml  humble.yaml  humble_cron.yaml  jazzy.yaml  jazzy_cron.yaml  kilted.yaml  kilted_cron.yaml  rolling.yaml  rolling_cron.yaml
common/easynav_costmap_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
common/easynav_costmap_common/include/easynav_costmap_common/: cost_values.hpp  costmap_2d.hpp  occ_grid_values.hpp
common/easynav_costmap_common/src/easynav_costmap_common/: costmap_2d.cpp
common/easynav_costmap_common/tests/: CMakeLists.txt  costmap_2d_tests.cpp
common/easynav_simple_common/: CHANGELOG.rst  package.xml
controllers/easynav_mpc_controller/: CHANGELOG.rst  package.xml
controllers/easynav_mppi_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  easynav_mppi_controller_plugins.xml  package.xml
controllers/easynav_mppi_controller/include/easynav_mppi_controller/: MPPIOptimizer.hpp
controllers/easynav_mppi_controller/src/easynav_mppi_controller/: MPPIController.cpp  MPPIOptimizer.cpp
controllers/easynav_serest_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  easynav_serest_controller_plugins.xml  package.xml
controllers/easynav_simple_controller/: CHANGELOG.rst  README.md  package.xml
controllers/easynav_vff_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
controllers/easynav_vff_controller/src/easynav_vff_controller/: VffController.cpp
debian/: changelog  control  copyright  gbp.conf  rules
include/bonxai/: grid_allocator.hpp  serialization.hpp
include/easynav_bonxai_maps_manager/: BonxaiMapsManager.hpp
include/easynav_costmap_common/: costmap_2d.hpp  geometry_utils.hpp
include/easynav_costmap_maps_manager/: map_io.hpp
include/easynav_fusion_localizer/: ukf_wrapper.hpp
include/easynav_mpc_controller/: MPCOptimizer.hpp
include/easynav_mppi_controller/: MPPIController.hpp  MPPIOptimizer.hpp
include/easynav_navmap_localizer/: PerceptionModel.hpp
include/easynav_navmap_maps_manager/: NavMapMapsManager.hpp
include/easynav_routes_maps_manager/: RoutesFilter.hpp
include/easynav_simple_common/: SimpleMap.hpp
include/easynav_vff_controller/: VffController.hpp
localizers/easynav_costmap_localizer/: CHANGELOG.rst  CMakeLists.txt  README.md  easynav_costmap_localizer_plugins.xml  package.xml
localizers/easynav_costmap_localizer/tests/: CMakeLists.txt  costmap_localizer_tests.cpp
localizers/easynav_fusion_localizer/: CHANGELOG.rst  README.md  easynav_fusion_localizer_plugins.xml  package.xml
localizers/easynav_fusion_localizer/config/: example_params.yaml
localizers/easynav_fusion_localizer/include/easynav_fusion_localizer/: FusionLocalizer.hpp
localizers/easynav_gps_localizer/: CHANGELOG.rst  CMakeLists.txt  README.md  easynav_gps_localizer_plugins.xml  (+1 more)
maps_managers/easynav_costmap_maps_manager/: CHANGELOG.rst  CMakeLists.txt  easynav_costmap_maps_manager_obstacle_filter.xml  package.xml
maps_managers/easynav_costmap_maps_manager/include/easynav_costmap_maps_manager/: CostmapMapsManager.hpp
maps_managers/easynav_costmap_maps_manager/include/easynav_costmap_maps_manager/filters/: CostmapFilter.hpp  InflationFilter.hpp  ObstacleFilter.hpp
maps_managers/easynav_costmap_maps_manager/src/easynav_costmap_maps_manager/: CostmapMapsManager.cpp  map_io.cpp
maps_managers/easynav_costmap_maps_manager/src/easynav_costmap_maps_manager/filters/: CostmapFilter.cpp  InflationFilter.cpp  ObstacleFilter.cpp
maps_managers/easynav_costmap_maps_manager/tests/: CMakeLists.txt  costmap_mapsmanager_tests.cpp
maps_managers/easynav_navmap_maps_manager/: CHANGELOG.rst  CMakeLists.txt  README.md  easynav_navmap_maps_manager_inflation_filter.xml  easynav_navmap_maps_manager_obstacle_filter.xml  easynav_navmap_maps_manager_plugins.xml  package.xml
maps_managers/easynav_navmap_maps_manager/include/easynav_navmap_maps_manager/: NavMapMapsManager.hpp  map_io.hpp  utils.hpp
maps_managers/easynav_navmap_maps_manager/include/easynav_navmap_maps_manager/filters/: InflationFilter.hpp  NavMapFilter.hpp  ObstacleFilter.hpp
maps_managers/easynav_navmap_maps_manager/src/easynav_navmap_maps_manager/: NavMapMapsManager.cpp  utils.cpp
maps_managers/easynav_navmap_maps_manager/src/easynav_navmap_maps_manager/filters/: InflationFilter.cpp  NavMapFilter.cpp  ObstacleFilter.cpp
maps_managers/easynav_navmap_maps_manager/tests/: CMakeLists.txt  navmap_mapsmanager_tests.cpp
maps_managers/easynav_routes_maps_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
maps_managers/easynav_routes_maps_manager/include/easynav_routes_maps_manager/: RoutesMapsManager.hpp
maps_managers/easynav_routes_maps_manager/include/easynav_routes_maps_manager/filters/: RoutesCostmapFilter.hpp
maps_managers/easynav_routes_maps_manager/src/easynav_routes_maps_manager/: RoutesMapsManager.cpp
maps_managers/easynav_routes_maps_manager/src/easynav_routes_maps_manager/filters/: RoutesCostmapFilter.cpp
maps_managers/easynav_routes_maps_manager/tests/: CMakeLists.txt  routes_costmap_filter_tests.cpp
planners/easynav_navmap_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml
planners/easynav_navmap_planner/include/easynav_navmap_planner/: AStarPlanner.hpp
planners/easynav_navmap_planner/src/easynav_navmap_planner/: AStarPlanner.cpp
tests/: costmap_2d_tests.cpp  costmap_bresenham_2d.cpp  costmap_localizer_tests.cpp  navmap_mapsmanager_tests.cpp  routes_mapsmanager_tests.cpp  simple_controller_tests.cpp  simple_maps_tests.cpp  test_utils.cpp
(+105 files in other folders)
